--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
 
-  "name": "GTmetrix Analyzer Plugin",
-  "description": "This extension will analyze a page using GTmetrix",
+  "name": "Switchify",
+  "description": "An extension to improve your productivity and have a clutter free browsing session",
   "version": "1.0",
   "background": {
-    "scripts": ["./bg.js"]
+    "scripts": ["bg.js"]
   },
   "browser_action": {
     "default_popup": "index.html"
